# Safe-Path

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  state.json  test_server.py
safepath_mvp/: .env.example  README.md  __init__.py  config.py  dashboard.py  logic.py  notifications.py  schema.py  server.py  state.json
safepath_mvp/dashboard/: __init__.py  components.py  dashboard.py
safepath_mvp/shared/: __init__.py  schema.py  utils.py
safepath_mvp/simulador/: __init__.py  config.py  logic.py  notifications.py  parser.py  server.py  settings.py
tests/: conftest.py  test_components.py  test_logic.py  test_parser.py  test_schema.py  test_server.py
