[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "safepath-mvp"
version = "1.0.0"
description = "SAFE-PATH MVP - Simulador de pulsera de seguridad preventiva"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0",
    "streamlit>=1.30",
    "folium>=0.14",
    "requests>=2.25",
    "python-dotenv>=1.0",
    "twilio>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "pre-commit>=3.0",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
known-first-party = ["safepath_mvp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
